docs/api/qiskit/0.43/qiskit.algorithms.gradients.LinCombEstimatorGradient.md
---
title: LinCombEstimatorGradient
description: API reference for qiskit.algorithms.gradients.LinCombEstimatorGradient
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.gradients.LinCombEstimatorGradient
---

# LinCombEstimatorGradient

<span id="qiskit.algorithms.gradients.LinCombEstimatorGradient" />

`LinCombEstimatorGradient(estimator, derivative_type=DerivativeType.REAL, options=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/gradients/lin_comb_estimator_gradient.py "view source code")

Bases: [`BaseEstimatorGradient`](qiskit.algorithms.gradients.BaseEstimatorGradient "qiskit.algorithms.gradients.base_estimator_gradient.BaseEstimatorGradient")

Compute the gradients of the expectation values. This method employs a linear combination of unitaries \[1].

**Reference:** \[1] Schuld et al., Evaluating analytic gradients on quantum hardware, 2018 [arXiv:1811.11184](https://arxiv.org/pdf/1811.11184.pdf)

**Parameters**

*   **estimator** ([*BaseEstimator*](qiskit.primitives.BaseEstimator "qiskit.primitives.BaseEstimator")) – The estimator used to compute the gradients.

*   **derivative\_type** ([*DerivativeType*](qiskit.algorithms.gradients.DerivativeType "qiskit.algorithms.gradients.DerivativeType")) –

    The type of derivative. Can be either `DerivativeType.REAL` `DerivativeType.IMAG`, or `DerivativeType.COMPLEX`. Defaults to `DerivativeType.REAL`.

    > *   `DerivativeType.REAL` computes $2 \mathrm{Re}[⟨ψ(ω)\vert O(θ)\vert dω ψ(ω)〉]$.
    > *   `DerivativeType.IMAG` computes $2 \mathrm{Im}[⟨ψ(ω)\vert O(θ)\vert dω ψ(ω)〉]$.
    > *   `DerivativeType.COMPLEX` computes $2 ⟨ψ(ω)\vert O(θ)\vert dω ψ(ω)〉$.

*   **options** ([*Options*](qiskit.providers.Options "qiskit.providers.Options") *| None*) – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > gradient’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting.

## Methods

<span id="qiskit-algorithms-gradients-lincombestimatorgradient-run" />

### run

<span id="qiskit.algorithms.gradients.LinCombEstimatorGradient.run" />

`LinCombEstimatorGradient.run(circuits, observables, parameter_values, parameters=None, **options)`

Run the job of the estimator gradient on the given circuits.

**Parameters**

*   **circuits** (*Sequence\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*]*) – The list of quantum circuits to compute the gradients.
*   **observables** (*Sequence\[BaseOperator |* [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.PauliSumOp")*]*) – The list of observables.
*   **parameter\_values** (*Sequence\[Sequence\[float]]*) – The list of parameter values to be bound to the circuit.
*   **parameters** (*Sequence\[Sequence\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*] | None] | None*) – The sequence of parameters to calculate only the gradients of the specified parameters. Each sequence of parameters corresponds to a circuit in `circuits`. Defaults to None, which means that the gradients of all parameters in each circuit are calculated. None in the sequence means that the gradients of all parameters in the corresponding circuit are calculated.
*   **options** – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > gradient’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting

**Returns**

The job object of the gradients of the expectation values. The i-th result corresponds to `circuits[i]` evaluated with parameters bound as `parameter_values[i]`. The j-th element of the i-th result corresponds to the gradient of the i-th circuit with respect to the j-th parameter.

**Raises**

**ValueError** – Invalid arguments are given.

**Return type**

[AlgorithmJob](qiskit.algorithms.AlgorithmJob "qiskit.algorithms.AlgorithmJob")

<span id="qiskit-algorithms-gradients-lincombestimatorgradient-update-default-options" />

### update\_default\_options

<span id="qiskit.algorithms.gradients.LinCombEstimatorGradient.update_default_options" />

`LinCombEstimatorGradient.update_default_options(**options)`

Update the gradient’s default options setting.

**Parameters**

**\*\*options** – The fields to update the default options.

## Attributes

<span id="qiskit.algorithms.gradients.LinCombEstimatorGradient.SUPPORTED_GATES" />

### SUPPORTED\_GATES

`= ['rx', 'ry', 'rz', 'rzx', 'rzz', 'ryy', 'rxx', 'cx', 'cy', 'cz', 'ccx', 'swap', 'iswap', 'h', 't', 's', 'sdg', 'x', 'y', 'z']`

<span id="qiskit.algorithms.gradients.LinCombEstimatorGradient.derivative_type" />

### derivative\_type

Return the derivative type (real, imaginary or complex).

**Returns**

The derivative type.

<span id="qiskit.algorithms.gradients.LinCombEstimatorGradient.options" />

### options

Return the union of estimator options setting and gradient default options, where, if the same field is set in both, the gradient’s default options override the primitive’s default setting.

**Returns**

The gradient default + estimator options.

